# reverse_image_search_engine

./: main.py  pyproject.toml
notebooks/: 02_SimilaritySearch.ipynb
