[project]
name = "reverse-image-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.5.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-qdrant>=0.2.0",
    "langsmith>=0.3.8",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
]
